formatting change to add content side-bar

--- a/_posts/2024-04-28-map-flow.md
+++ b/_posts/2024-04-28-map-flow.md
@@ -17,7 +17,7 @@ Diving headfirst into Agile without knowing the current process is like trying t
 
 Think of it as your "before" picture in the transformation glow-up. You'll uncover what's working, what's not, and how to pave the way for smoother, faster, and more satisfying workflows. Here's how to make it happen.
 
-### Why Map Out the Current Flow?
+## Why Map Out the Current Flow?
 
 🚀 **Understand the Starting Point**
 
@@ -35,7 +35,7 @@ Your map of the current flow serves as a baseline to measure the impact of Agile
 
 A visual map of your process makes it easy for everyone (team members, managers, and stakeholders) to understand why change is necessary. This helps in getting buy-in for the transformation.
 
-### How to Map Out Your Flow Like a Pro
+## How to Map Out Your Flow Like a Pro
 
 **Step 1: Assemble the Dream Team**
 
@@ -61,7 +61,7 @@ Document key metrics such as how long tasks take (cycle time), how long they sit
 
 Don’t skip this step! Make sure everyone agrees on the map. You'll need a shared understanding to move forward together. This step is critical to avoid overlooking hidden complexities.
 
-### What to Watch For in Your Flow
+## What to Watch For in Your Flow
 
 * 🚧 **Bottlenecks:** Where does work slow down or pile up?
 * 🔄 **Feedback Loops:** Are feedback loops fast and clear or painfully slow?
@@ -69,14 +69,14 @@ Don’t skip this step! Make sure everyone agrees on the map. You'll need a shar
 * 💔 **Broken Communication:** Are miscommunications causing delays?
 * 🏃‍♂️ **Overworked Team Members:** Are some team members consistently overburdened while others are underutilized?
 
-### Benefits of Mapping the Current Flow
+## Benefits of Mapping the Current Flow
 
 * **Clarity is Power:** Knowing the current state makes it easier to design a better future state.
 * **Improved Collaboration:**  Collaborating on the map brings your team closer and creates ownership of the transformation.
 * **Quick Wins:** Spotting and fixing obvious problems in the current flow is low-hanging fruit and it builds momentum for deeper Agile practices.
 * **Informed Decision-Making:** A clear map ensures decisions are based on facts, not assumptions.
 
-### Moving Forward: From Current to Future State
+## Moving Forward: From Current to Future State
 
 Once you’ve got your map, it’s time to dream big! Take everything you’ve learned and reimagine your process with Agile principles:
 
@@ -87,7 +87,7 @@ Once you’ve got your map, it’s time to dream big! Take everything you’ve l
 
 Your future flow should be all about speed, collaboration, and delivering awesome results.
 
-### Summary
+## Summary
 Mapping out your current flow might not sound glamorous, but trust me, it’s the secret sauce for an epic Agile transformation. Think of it as the foundation for your new-and-improved workflows; it ensures you start with a clear understanding of where you are, so you can confidently plan where you need to go. By involving your team in this process, you foster transparency, collaboration, and ownership. Once you've nailed this step, you'll be unstoppable.
 
 🚀 Reach out if you need help with Agile transformation for your database team.
