--- a/_posts/2024-05-28-game-plan.md
+++ b/_posts/2024-05-28-game-plan.md
@@ -17,12 +17,12 @@ Before diving headfirst into daily stand-ups and retrospectives, you’ve got to
 
 Here's how to craft a game plan that sets you up for Agile success.
 
-### 1. Know Your Why: Find Your Core Motivation
+## 1. Know Your Why: Find Your Core Motivation
 Why Agile? Seriously, what's the goal? Is it about speeding up delivery, breaking down silos, or becoming the team that actually delivers what customers want?
 
 This "why" isn’t just a fancy tagline; it's your guiding star. Share it with your team, make it clear, and rally everyone around it. When people know what they're working toward, magic happens. If you missed it, be sure to check out my blog <a href="https://rkkoranteng.com/posts/know-your-why/" target="blank">"Know Your Why: The Secret Sauce to Nailing Agile Transformation"</a>
  
-### 2. Take Stock: Understand Your Current State
+## 2. Take Stock: Understand Your Current State
 Before you start transforming, you’ve got to understand where you're starting. This baseline assessment helps you identify strengths to build on and challenges to address.
 
 * **Processes:** Are they smooth or a hot mess?
@@ -32,7 +32,7 @@ Before you start transforming, you’ve got to understand where you're starting.
 
 Be real with yourself; knowing your strengths and weaknesses is key to leveling up. If you missed it, be sure to check out my blog <a href="https://rkkoranteng.com/posts/map-flow/" target="blank">"Map Out the CUrrent Flow"</a>
 
-### 3. Pick Your Agile Style
+## 3. Pick Your Agile Style
 Agile isn't a one-size-fits-all deal. It's more like a menu where you pick the flavor that fits your team. Your game plan should outline which Agile framework(s) align with your goals, organizational size, and complexity.
 
 Here're an over-simplfified explanations of popular Agile frameworks:
@@ -43,7 +43,7 @@ Here're an over-simplfified explanations of popular Agile frameworks:
 
 Mix and match if you need to, but don’t overthink it. Start simple and adjust as you go.
 
-### 4. Get Your Leaders on Board
+## 4. Get Your Leaders on Board
 
 Agile transformation requires a cultural shift, and culture starts at the top. Leaders need to:
 
@@ -53,7 +53,7 @@ Agile transformation requires a cultural shift, and culture starts at the top. L
 
 Show leaders how Agile ties back to real wins; faster delivery, happier customers, and higher profits. If you missed it, be sure to check out my blog <a href="https://rkkoranteng.com/posts/leadership-support/" target="blank">"Get Leadership on Board for Agile Transformation"</a>
 
-### 5. Start Small, Dream Big
+## 5. Start Small, Dream Big
 Don’t try to transform everything at once. Start with a small but meaningful projects and let it be your proof of concept.
 
 * Test out Agile practices.
@@ -62,7 +62,7 @@ Don’t try to transform everything at once. Start with a small but meaningful p
 
 When the pilot takes off, scale it up like a boss. By then, you'll know what works and what doesn't. I'll write a blog ~~in the future~~ detailing why <a href="https://rkkoranteng.com/posts/start-small/" target="blank">"Starting Small is the Best Way to Begin Your Agile Journey"</a>
 
-### 6. Build a Flexible Roadmap
+## 6. Build a Flexible Roadmap
 Every hero needs a map. Yours should highlight key milestones, timelines, and goals. Your roadmap should include:
 
 * **Training sessions:** Give your team the skills to succeed.
@@ -76,7 +76,7 @@ You should be able to easily spot the Agile theme by now; it's all about priorit
 
 Keep your eyes open for industry trends and new tools. What works today might need an upgrade tomorrow, and that's okay.
 
-### Summary
+## Summary
 I'm going to wrap up this topic with a few words of wisdom:
 
 * Agile transformation is a marathon, not a sprint. 
