--- a/_posts/2024-09-28-use-tools.md
+++ b/_posts/2024-09-28-use-tools.md
@@ -1,5 +1,5 @@
 ---
-title: 'Use Cool Tools: Supercharge Your Agile Transformation'
+title: 'Use Tools to Supercharge Your Agile Transformation'
 author: Richard Koranteng
 date: 2024-09-28 15:00:00 -0600
 description: The right tools can turn your Agile transformation into an epic win.
