fix: spelling error

--- a/_posts/2024-09-28-use-tools.md
+++ b/_posts/2024-09-28-use-tools.md
@@ -17,7 +17,7 @@ Agile is not a set of cool shiny new tools, but lets face it, doing Agile manual
 
 If you're serious about your Agile transformation, it's time to gear up with some emerging tools. Here’s why they matter and which ones to consider. 🚀
 
-## Why Cool Tool Are a Must-Have
+## Why Cool Tools Are a Must-Have
 Agile is fast-paced, collaborative, and all about delivering value. Tools bring structure to the chaos, letting you:
 * **Visualize Workflows:** Keep everyone on the same page with real-time updates.
 * **Automate the Boring Stuff:** Save time by automating repetitive tasks.
