add number to title

--- a/_posts/2024-04-28-map-flow.md
+++ b/_posts/2024-04-28-map-flow.md
@@ -1,5 +1,5 @@
 ---
-title: 'Map Out the Current Flow'
+title: '04 - Map Out the Current Flow'
 author: Richard Koranteng
 date: 2024-04-28 15:00:00 -0600
 description: What’s Working? What’s Not? Look at how things get done now. Identify bottlenecks, inefficiencies, or gaps Agile can help fix.
