--- a/_posts/2024-11-28-scale-up.md
+++ b/_posts/2024-11-28-scale-up.md
@@ -2,7 +2,7 @@
 title: '11 - Take Your Agile Transformation to the Next Level'
 author: Richard Koranteng
 date: 2024-11-28 15:00:00 -0600
-description: This is how your team stays nimble, solve problems, and deliver value again and again.
+description: Scaling Agile is a journey, not a destination.
 categories: [Agile Transformation]
 tags: [agile]
 img_path: /assets/screenshots/agile-transformation
