--- a/_posts/2025-01-01-sdlc.md
+++ b/_posts/2025-01-01-sdlc.md
@@ -14,6 +14,8 @@ image:
 ---
 
 ## What is SDLC?
+It's safe to say that modern businesses are software driven, therefore they need a fast, easy, and reliable way to build + deliver their software. This is the goal of SDLC.
+
 - The Software Development Life Cycle (SDLC) is a structured process that enables the production of high-quality, low-cost software, in the shortest possible production time. 
 - The goal of the SDLC is to produce superior software that meets and exceeds all customer expectations and demands. 
 - The SDLC defines and outlines a detailed plan with stages, or phases, that each encompass their own process and deliverables.
