--- a/_posts/2025-01-01-sdlc.md
+++ b/_posts/2025-01-01-sdlc.md
@@ -1,5 +1,5 @@
 ---
-title: 'software-development-lifecycle'
+title: 'Software Development Lifecycle'
 author: Richard Koranteng
 date: 2025-01-01 15:00:00 -0600
 description: basic explanation software development lifecycle
