add new cover (jpg)

--- a/_posts/2025-01-01-sdlc.md
+++ b/_posts/2025-01-01-sdlc.md
@@ -7,7 +7,7 @@ categories: [Modern DBA Project,Agile]
 tags: [training]
 img_path: /assets/screenshots/agile-transformation
 image:
-  path: sdlc.png
+  path: sdlc.jpg
   width: 100%
   height: 100%
   alt: credit - bigwater.consulting
