--- a/_posts/2025-01-01-sdlc.md
+++ b/_posts/2025-01-01-sdlc.md
@@ -10,7 +10,7 @@ image:
   path: sdlc.jpg
   width: 100%
   height: 100%
-  alt: credit - bigwater.consulting
+  alt: credit - bmc.com
 ---
 
 ## What is SDLC?
