change image alt to my blog site

--- a/_posts/2025-03-15-scrum-faq.md
+++ b/_posts/2025-03-15-scrum-faq.md
@@ -10,7 +10,7 @@ image:
   path: scrum-cover.png
   width: 100%
   height: 100%
-  alt: scrum faq
+  alt: https://rkkoranteng.com
 ---
 
 ## 1. What's Scrum?
